cmake_minimum_required (VERSION 3.10)
project (CabanaPIC)
set(Kokkos_DIR "$ENV{Kokkos_ROOT}" CACHE STRING "Kokkos root directory")
find_package(Kokkos REQUIRED)
if(NOT TARGET Cabana::cabanacore)
    find_package(Cabana REQUIRED)
endif()
find_package(HDF5 REQUIRED)
find_package(CUDAToolkit)
find_package(MPI)

add_executable(Cabana_PIC.exe cabana_pic.cpp)
target_link_libraries(Cabana_PIC.exe Cabana::cabanacore)
target_link_libraries(Cabana_PIC.exe Kokkos::kokkos)
target_link_libraries(Cabana_PIC.exe hdf5)
target_link_libraries(Cabana_PIC.exe mpi)
#target_link_libraries(Cabana_PIC.exe CUDA::cudart)
